--- a/src/main/resources/templates/task/index.html
+++ b/src/main/resources/templates/task/index.html
@@ -3,32 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-  <title>Document</title>
+  <title>EpicTask</title>
    <!-- Compiled and minified CSS -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+   <link rel="stylesheet" href="style.css">
 </head>
 <body class="grey lighten-2">
+
   <nav>
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">EpicTask</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="#">pendentes</a></li>
+        <li class="active"><a href="/task">pendentes</a></li>
         <li><a href="#">concluidas</a></li>
         <li><a href="#">usuarios</a></li>
+        <li class="li-avatar">
+          <img class="avatar" src="https://i.pravatar.cc/300">
+        </li>
       </ul>
     </div>
   </nav>
 
   <main class="container">
 
-    <span class="card-panel teal darken-2 lighten-4 accent-3" th:if="${success}" th:text="${success}"></span>
+    <span class="card-panel teal accent-3" th:if="${success}" th:text="${success}"></span>
     <span class="card-panel red accent-3 white-text" th:if="${error}" th:text="${error}"></span>
 
     <h2>Tarefas Pendentes</h2>
 
     <div class="row">
-      <div class="col s12 m6 l4" th:each="task: ${tasks}">
+      <div class="col s12 m6 l4" th:each="task : ${tasks}">
         <div class="card">
           <div class="card-content">
             <div class="progress">
@@ -39,7 +44,7 @@
             <span data-badge-caption="pontos" class="new badge blue white-text" th:text="${task.score}"></span>
           </div>
           <div class="card-action">
-            <a th:href="${'/task/delete/' + task.id}" class="btn red">
+            <a th:href="${'/task/delete/' + task.id}" class="btn red lighten-1">
               <i class="material-icons">delete</i>
             </a>
           </div>
@@ -48,7 +53,7 @@
     </div>
 
     <div class="fixed-action-btn">
-      <a class="btn-floating btn-large blue">
+      <a href="/task/new" class="btn-floating btn-large blue">
           <i class="large material-icons">add</i>
       </a>
   </div>
