--- a/src/main/resources/templates/task/index.html
+++ b/src/main/resources/templates/task/index.html
@@ -7,6 +7,7 @@
    <!-- Compiled and minified CSS -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
    <link rel="stylesheet" href="style.css">
 </head>
 <body class="grey lighten-2">
@@ -19,7 +20,20 @@
         <li><a href="#">concluidas</a></li>
         <li><a href="#">usuarios</a></li>
         <li class="li-avatar">
-          <img class="avatar" src="https://i.pravatar.cc/300">
+
+          <!-- Dropdown Trigger -->
+          <a class='dropdown-trigger' href='#' data-target='dropdown1'>
+            <img class="avatar" th:src="${avatar_url}">
+          </a>
+
+
+            <!-- Dropdown Structure -->
+            <ul id='dropdown1' class='dropdown-content'>
+              <li><span th:text="${username}"></span></li>
+              <li class="divider" tabindex="-1"></li>
+              <li><a href="/logout"><i class="material-icons">logout</i>sair</a></li>
+            </ul>
+
         </li>
       </ul>
     </div>
@@ -61,4 +75,17 @@
   </main>
 
 </body>
+
+<script>
+   document.addEventListener('DOMContentLoaded', function() {
+    var elems = document.querySelectorAll('.dropdown-trigger');
+    const options = {
+      coverTrigger: false,
+      constrainWidth: false
+    }
+    //M é o objeto raiz do Materialize, precisa do JS do Materialize
+    //instalado para ter acesso a esse objeto
+    var instances = M.Dropdown.init(elems, options);
+  });
+</script>
 </html>
