--- a/src/main/resources/templates/task/index.html
+++ b/src/main/resources/templates/task/index.html
@@ -61,6 +61,12 @@
             <a th:href="${'/task/delete/' + task.id}" class="btn red lighten-1">
               <i class="material-icons">delete</i>
             </a>
+            <a th:href="${'/task/dec/' + task.id}" class="btn">
+              <i class="material-icons">remove</i>
+            </a>
+            <a th:href="${'/task/dec/' + task.id}" class="btn">
+              <i class="material-icons">add</i>
+            </a>
           </div>
         </div>
       </div>
